Pre-footer: Fix the newsletter form on mobile (finally!)

--- a/assets/less/new/layout.less
+++ b/assets/less/new/layout.less
@@ -690,6 +690,21 @@ section {
   font-size: 1rem;
 }
 
+@media (max-width: @md) {
+  .newsletter-form {
+    display: flex;
+
+    input {
+      width: 100%;
+    }
+
+    button {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+  }
+}
+
 .btn-newsletter {
   position: relative;
   background: none;
